--- a/XDLogin/XDLogin/Base.lproj/Main.storyboard
+++ b/XDLogin/XDLogin/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Book</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -101,8 +106,8 @@
                     <connections>
                         <outlet property="emailText" destination="xm3-hm-mEM" id="TuS-Z6-x7E"/>
                         <outlet property="passwordText" destination="OSX-VP-EXN" id="hYU-ry-ZL9"/>
-                        <segue destination="bBF-eQ-9Up" kind="show" identifier="LoginToDummySegue" id="YeO-X6-GEg"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="LoginToHomeSegue" id="12O-Jk-yez"/>
+                        <segue destination="paD-BL-jvo" kind="presentation" identifier="LoginToGrocerySegue" id="cil-Qb-i8A"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B9C-FU-DdG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -168,53 +173,67 @@
                         <outlet property="emailText" destination="mPt-3N-w05" id="vqW-pL-t6y"/>
                         <outlet property="passwordText" destination="ytZ-MC-erD" id="xx2-0M-6dD"/>
                         <outlet property="usernameText" destination="SgT-Hi-9AU" id="Iv5-dz-iqI"/>
-                        <segue destination="bBF-eQ-9Up" kind="show" identifier="SignupToDummySegue" id="YZB-sp-KRP"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="SignupToHomeSegue" id="DNC-ri-dQX"/>
+                        <segue destination="paD-BL-jvo" kind="presentation" identifier="SignupToGrocerySegue" id="Uw3-3n-lHk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y0w-y4-DmP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1356" y="1057"/>
         </scene>
-        <!--Dummy View Controller-->
-        <scene sceneID="UsT-ZJ-H0s">
+        <!--Grocery List View Controller-->
+        <scene sceneID="c59-Dc-HPe">
             <objects>
-                <viewController storyboardIdentifier="dummyScreen" id="bBF-eQ-9Up" customClass="DummyViewController" customModule="XDLogin" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="z3b-ky-y3n">
+                <tableViewController storyboardIdentifier="groceryListScreen" title="Grocery List View Controller" id="paD-BL-jvo" customClass="GroceryListTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="SP9-rh-vYb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H46-Bq-wPf">
-                                <rect key="frame" x="127" y="307" width="120" height="53"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Logout">
-                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="titleShadowColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="logoutButton:" destination="bBF-eQ-9Up" eventType="touchUpInside" id="GB7-xD-zOk"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome! Start Here!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRB-BX-HU5">
-                                <rect key="frame" x="105" y="278" width="164" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="P86-1J-R3J"/>
-                    </view>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" textLabel="a16-5K-s9l" detailTextLabel="PJ9-Mg-zvD" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="ozR-vO-jdT">
+                                <rect key="frame" x="0.0" y="22" width="375" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ozR-vO-jdT" id="KMW-ni-QVy">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="a16-5K-s9l">
+                                            <rect key="frame" x="16" y="7" width="35" height="25"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PJ9-Mg-zvD">
+                                            <rect key="frame" x="16" y="34" width="41.5" height="16.5"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="paD-BL-jvo" id="lw1-qz-S2F"/>
+                            <outlet property="delegate" destination="paD-BL-jvo" id="rLv-uf-Vk3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Grocery List" id="Pay-a7-9AD">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2d2-Dh-QyI">
+                            <connections>
+                                <action selector="addButtonDidTouch:" destination="paD-BL-jvo" id="eiD-vU-BYz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="DummyToHomeSegue" id="RSc-Cc-Ui7"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="GroceryToHomeSegue" id="QyY-AR-JIH"/>
                     </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1tj-uh-l34" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wIG-Bd-b1a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2286" y="118"/>
+            <point key="canvasLocation" x="2511" y="95"/>
         </scene>
     </scenes>
     <resources>
@@ -223,7 +242,7 @@
         <image name="Splash page" width="375" height="667"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YZB-sp-KRP"/>
-        <segue reference="DNC-ri-dQX"/>
+        <segue reference="Uw3-3n-lHk"/>
+        <segue reference="QyY-AR-JIH"/>
     </inferredMetricsTieBreakers>
 </document>
